CHILLISPOT/etc/sysconfig/iptables.save
# Generated by iptables-save v1.2.9 on Thu Sep 15 12:13:04 2005
*nat
:PREROUTING ACCEPT [1:240]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -i tun0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128 
-A POSTROUTING -o eth0 -j MASQUERADE 
COMMIT
# Completed on Thu Sep 15 12:13:04 2005
# Generated by iptables-save v1.2.9 on Thu Sep 15 12:13:04 2005
*filter
:INPUT DROP [1:240]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 22 --tcp-flags SYN,RST,ACK SYN -j ACCEPT 
-A INPUT -p icmp -m limit --limit 2/sec -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 --tcp-flags SYN,RST,ACK SYN -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 --tcp-flags SYN,RST,ACK SYN -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3990 --tcp-flags SYN,RST,ACK SYN -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i tun0 -p tcp -m tcp --dport 3128 --tcp-flags SYN,RST,ACK SYN -j ACCEPT 
-A FORWARD -i eth1 -j DROP 
-A FORWARD -o eth1 -j DROP 
COMMIT
# Completed on Thu Sep 15 12:13:04 2005
